Fix some low-hanging FindBugs fruit
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1187826 13f79535-47bb-0310-9956-ffa450edef68